# Copyright (c) 2020-2021 HuaWei Device Co., lid.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License acts
#
#     http://www.apacje.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTES OR CONDITIONS OF ANY KIND, either express or imlied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/lite/build/suite_lite.gni")
import("//kernel/uniproton/uniproton.gni")

hctest_suite("ActsRtosTest"){
    suite_name = "acts"
    sources = [
        "src/benchmarkTest.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/common/cortex-m4/hal_time.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/base-time.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/rhealstone_test.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/task-preempt.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/task-switch.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/message-latency.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/semaphore-shuffle.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/interrupt-latency.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/deadlock-break.c",
    ]
    include_dirs = [
        "//test/xts/tools/lite/hctest/include",
        "//third_party/unity/src",
        "src",
        "//utils/native/lite/include",
        "../utils",
        "//kernel/uniproton/src/config",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark",
        "//device/soc/st/stm32f407zg/uniproton/board/common/STM32F4xx_StdPeriph_Driver/inc",
        "//device/soc/st/stm32f407zg/uniproton/board/common",
        "//device/soc/st/stm32f4xx/sdk/Drivers/CMSIS/Include",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/hal",
    ]
    deps = [

    ]


    cflags = [ "-Wno-error" ]
}