# Copyright (c) 2022 Huawei Device Co., Ltd.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//test/xts/tools/lite/build/suite_lite.gni")
import("//kernel/uniproton/uniproton.gni")

hctest_suite("ActsRtosTest") {
    suite_name = "acts"
    sources = [
        "src/benchmarkTest.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/common/cortex-m4/hal_time.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/base-time.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/rhealstone_test.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/task-preempt.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/task-switch.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/message-latency.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/semaphore-shuffle.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/interrupt-latency.c",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/rhealstone/deadlock-break.c",
    ]
    include_dirs = [
        "//test/xts/tools/lite/hctest/include",
        "//third_party/unity/src",
        "src",
        "//utils/native/lite/include",
        "../utils",
        "//kernel/uniproton/src/config",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark",
        "//device/soc/st/stm32f407zg/uniproton/board/common/STM32F4xx_StdPeriph_Driver/inc",
        "//device/soc/st/stm32f407zg/uniproton/board/common",
        "//device/soc/st/stm32f4xx/sdk/Drivers/CMSIS/Include",
        "//device/soc/st/stm32f407zg/uniproton/board/benchmark/hal",
    ]
    deps = [

    ]


    cflags = [ "-Wno-error" ]
}