# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/uniproton/uniproton.gni")
import("//test/xts/tools/lite/build/suite_lite.gni")

hctest_suite("ActsPerfTest") {
  suite_name = "acts"
  sources = [ "src/perfTest.c" ]
  include_dirs = [ "../utils" ]

  cflags = [ "-Wno-error" ]
  configs = [
    ":public",
    "${device_path}/board/common:stm32_config",
  ]
}

config("public") {
  include_dirs = [
    "${device_path}/board/benchmark",
    "${device_path}/board/common/STM32F4xx_StdPeriph_Driver/inc",
    "${device_path}/board/benchmark/hal",
  ]
}
