import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")
config("system_test_config") {
    include_dirs = []

    configs = []
}

group("functional_test_info") {
    testonly = true
    deps = [
    # "multi_handout_hand:hand",
    "multi_handout_keyBoard:keyboard",
    #"multi_handout_knob:knob",
    #"multi_handout_mouse:mouse",
    #"multi_handout_phalangeal:phalangeal",
    #"multi_handout_remotecontrol:remotecontrol",
    #"multi_handout_rock:rock",
    #"multi_handout_system:system",
    "multi_handout_touchscreen:touchscreen",
    #"multi_handout_trackball:trackball",
    #"multi_handout_trackPad:trackpad",
    #"multi_handout_voice:voice",
    ]
}