#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")
import("//build/test.gni")

group("fuzz_test") {
  testonly = true
  deps = [
    "common_event_handler:common_event_handler_fuzz_test",
    "event_dump:event_dump_fuzz_test",
    "keyboard_event:keyboard_event_fuzz_test",
    "manipulation_event:manipulation_event_fuzz_test",
    "media_event_handler:media_event_handler_fuzz_test",
    "mouse_event:mouse_event_fuzz_test",
    "multimodal_event:multimodal_event_fuzz_test",
    "register_event_handle_manager:register_event_handle_manager_fuzz_test",
    "system_event_handler:system_event_handler_fuzz_test",
    "telephone_event_handler:telephone_event_handler_fuzz_test",
  ]
}
