# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_moduletest_suite("tee_test_arithmetic_api") {
  tee_dev_kit_dir   = "//base/tee/tee_dev_kit"
  sources = [
    "../utils/main.cpp",
    "../utils/public_test/public_test.cpp",
    "../utils/session_mgr/client_session_mgr.cpp",
    "./src/tee_test_arithmetic_api.cpp",
  ]

  include_dirs = [
    tee_dev_kit_dir + "/sdk/thirdparty/open_source/bounds_checking_function/include/libhwsecurec",
    "//base/tee/tee_client/interfaces/kits/c/include",

    "../utils/include",
    "../utils",
    "../utils/cmd_id",
    "./common",

    "//third_party/googletest/googletest/include",
    "//base/startup/init/interfaces/kits/syscap/include",
  ]

  deps = [
      "//base/tee/tee_client/frameworks/build/standard:libteec_vendor",
      "//base/startup/init/interfaces/kits/syscap:deviceinfo_ndk",
  ]

  external_deps = [
      "bounds_checking_function:libsec_shared",
  ]

  cflags = [ "-Wno-error" ]
  ldflags = [
    "-lm",
    "-lpthread",
  ]
}