# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("stage") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "eighthbatch/stageapplicationInfotest:StageApplicationInfoTest",
      "eighthbatch/stageauxapplicationInfotest:StageAuxpplicationinfoTest",
      "eighthbatch/stageenvchangetest:StageEnvchangeTest",
      "eighthbatch/stagemissionmanagertest:StageMissionmanagerTest",
      "fifthbatch/stageauxserviceextensiontest:StageAuxserviceextensionTest",
      "fifthbatch/stageserviceextensiontest:StageServiceextensionTest",
      "fourthbatch/stageabilityvisbletest:StageAbilityvisbleTest",
      "fourthbatch/stageabilitywithreturntest:StageAbilitywithreturnTest",
      "fourthbatch/stageapi7abilitywithreturntest:StageApi7abilitywithreturnTest",
      "fourthbatch/stageauxabilityvisbletest:StageAuxabilityvisbleTest",
      "fourthbatch/stageauxabilitywithreturntest:StageAuxabilitywithreturnTest",
      "fourthbatch/stageauxjsabilityvisbletest:StageAuxjsabilityvisbleTest",
      "ninthbatch/stageenvchangetest:StageEnvchangeTest",
      "secondbatch/stageauxcontextapplicationtest:StageAuxcontextapplicationTest",
      "secondbatch/stageauxserviceextensiontest:StageAuxserviceextensionTest",
      "secondbatch/stagecontextapplication2test:StageContextapplication2Test",
      "secondbatch/stagecontextapplicationtest:StageContextapplicationTest",
      "secondbatch/stageserviceextensiontest:StageServiceextensionTest",
      "sixthbatch/stageapplicationcontexttest:StageApplicationcontextTest",
      "sixthbatch/stageauxcleartest:StageAuxclearTest",
      "sixthbatch/stageauxmultitaskingtest:StageAuxmultitaskingTest",
      "sixthbatch/stageauxstatetest:StageAuxstateTest",
      "sixthbatch/stagecleartest:StageClearTest",
      "sixthbatch/stagelocktest:StageLockTest",
      "sixthbatch/stagemultitaskingtest:StageMultitaskingTest",
      "sixthbatch/stagesharingdebugtest:StageSharingdebugTest",
      "sixthbatch/stagestatetest:StageStateTest",
      "sixthbatch/stagetaskswitingtest:StageTaskswitingTest",
      "thirdbatch/stageabilitystaandtertest:StageAbilitystaandterTest",
      "thirdbatch/stageauxabilitystaandtertest:StageAuxabilitystaandterTest",
    ]
  }
}
