# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("actgetformrunninginfo") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ActGetFormRunningInfoNotSys:ActGetFormRunningInfoNotSys",
      "ActGetFormRunningInfoTest:ActGetFormRunningInfoTest",
      "ActGetFormRunningInfoTestNoPermission:ActGetFormRunningInfoTestNoPermission",
      "formProvider:formProvider",
      "formProviderSecond:formProviderSecond_1",
      "formProviderSecond:formProviderSecond_2",
      "formProviderSecond:formProviderSecond_3",
      "formProviderThird:formProviderThird_1",
      "formProviderThird:formProviderThird_2",
      "formUser:formUser",
      "formUser2:formUser2",
      "formUser3:formUser3",
      "formUserfifth:formUserfifth",
      "providerFormFifth:providerFormFifth",
      "providerFormFourth:providerFormFourth_1",
      "providerFormFourth:providerFormFourth_2",
      "providerFormSixth:providerFormSixth",
      "provider_form_seven:provider_form_seven_1",
      "provider_form_seven:provider_form_seven_2",
      "userFormFourth:userFormFourth",
      "userFormNine:userFormNine",
      "userFormSeventh:userFormSeventh",
      "user_form_ten:user_form_ten",
      "userformeight:userformeight",
      "userformsixth:userformsixth",
    ]
  }
}
