# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("actsinappcard") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "fa/actsinappcardactiverefreshfarelyhap:ActsInAppCardActiveRefreshFARelyHap",
      "fa/actsinappcarddeletefatest:ActsInAppCardDeleteFaTest",
      "fa/actsinappcardeventfarelyhap:ActsInAppCardEventFARelyHap",
      "fa/actsinappcardfatest:ActsInAppCardFATest",
      "fa/actsinappcardforcerefreshfarelyhap:ActsInAppCardForceRefreshFaRelyHap",
      "fa/actsinappcardforcerefreshfatest:ActsInAppCardForceRefreshFaTest",
      "fa/actsinappcardlinkagefaarelyhap:ActsInAppCardLinkageFAA",
      "fa/actsinappcardlinkagefabrelyhap:ActsInAppCardLinkageFAB",
      "fa/actsinappcardlinkagefarelyhap:ActsInAppCardLinkageFARelyHap",
      "fa/actsinappcardloadfarelyhap:ActsInAppCardLoadFARelyHap",
      "stage/actsinappcardactiverefreshstagerelyhap:ActsInAppCardActiveRefreshStageRelyHap",
      "stage/actsinappcarddeletestagetest:ActsInAppCardDeleteStageTest",
      "stage/actsinappcardeventstagerelyhap:ActsInAppCardEventStageRelyHap",
      "stage/actsinappcardforcerefreshentrytest:ActsInAppCardForceRefreshStageEntryTest",
      "stage/actsinappcardforcerefreshfeaturerelyhap:ActsInAppCardForceRefreshStageFeatureRelyHap",
      "stage/actsinappcardlinkagestagearelyhap:ActsInAppCardLinkageStageA",
      "stage/actsinappcardlinkagestagebrelyhap:ActsInAppCardLinkageStageB",
      "stage/actsinappcardlinkagestagerelyhap:ActsInAppCardLinkageStageRelyHap",
      "stage/actsinappcardloaderr:ActsInAppCardLoadErr",
      "stage/actsinappcardloaderra:ActsInAppCardLoadErrA",
      "stage/actsinappcardloadstagerelyhap:ActsInAppCardLoadStageRelyHap",
      "stage/actsinappcardstagetest:ActsInAppCardStageTest",
    ]
  }
}
