# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("hits_ability_runtime_stateinfo") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "getextensionrunninginfostest:hits_stateinfo_getrunninginfo_test",
      "openharmonyisterminatingtest:hits_stateinfo_isterminating_test",
      "stateInfobackability:hits_stateinfo_backability",
      "stateInfostartability:hits_stateinfo_startability",
      "stateinfoappempty:hits_stateinfo_app_empty",
      "stateinfoappkillself:hits_stateinfo_app_killself",
      "stateinfogetforgroundapps:hits_stateinfo_getforgrdapps",
      "stateinfoserviceempty:hits_stateinfo_service_empty",
    ]
  }
}
